add fb configurations

--- a/Mnara_El_Seha/android/app/src/main/res/values/strings.xml
+++ b/Mnara_El_Seha/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Mnara_El_Seha</string>
+    <string name="facebook_app_id">1400337294031459</string>
 </resources>
